2008-08-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectTreeView.cpp (ObjectTreeView::edit): double-clicking on an
	object in the tree opens it in the editor panel. Normally,
	QTreeWidget also expands or collapses tree branch on double click
	if the object has children. This was confusing. This change makes
	tree not expand and collapse branches on double click.

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext):
	Applied a one-line patch from <jringle@users.sourceforge.net> to
	fix problem in the generated iptables script where it would
	delete default route if routing rules were used.

2008-08-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::checkForUpgrade): the GUI checks if
	updated version is available on startup by making simple HTTP GET
	request to the web site at http://www.fwbuilder.org. This can be
	turned off in the Preferences dialog. Preferences dialog also
	provides a button to perform this query at any time. If function
	is enabled in Preferences, it is performed at every time the GUI
	is launched. The query does not transmit any data to the server,
	but the URL of the query includes the version of the Firewall
	Builder.

2008-08-06  Vadim Kurland  <vadim@vk.crocodile.org>

	* new_object.cpp (newObject): fixed bug # 1997469: "Create a new
	User library via fwbedit". Fwbedit creates new library and
	populates it with correct set of standard folders.

2008-08-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* pfAdvancedDialog_en_US.html: Help page for the advanced settings
	dialog for PF firewall

2008-08-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printActionOnReject):
	fixed bug #2037806: "Beta 3.0 Build 437: IPTABLES IPv6 policy ICMP
	reject action". Ip6tables target REJECT accepts different
	arguments for the --reject-with.

	* OSConfigurator_linux24.cpp (printPathForAllTools): fixed bug
	#2037809: "Beta 3.0 Build 437: IP6TABLES_RESTORE missing". Added